--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Hello world :)</h1>
+    <nav>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
